# obsidian-remarkable-sync

./: Dockerfile  README.md  crontab.yml  obs2rem.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
obs2rem/: __init__.py  __main__.py  rem_utils.py  utils.py
remarks/: __init__.py  __main__.py  remarks.py  utils.py
remarks/conversion/: drawing.py  parsing.py
